--- a/src/styles/Banner.module.scss
+++ b/src/styles/Banner.module.scss
@@ -160,7 +160,26 @@ cursor: pointer;
     background-color: #4bddca;
   }
 }
-
+@media screen and (max-width: 1700px) {
+  .line {
+    width: 1100px;
+    padding: 10px;
+    margin: 30px;
+   }
+   .about {
+    width: 1200px;
+   }
+}
+@media screen and (max-width: 1700px) {
+  .line {
+    width: 1200px;
+    padding: 10px;
+    margin: 30px;
+   }
+   .about {
+    width: 1200px;
+   }
+}
 @media screen and (max-width: 1000px) {
     
    .banner img {
