--- a/src/styles/Stand.module.scss
+++ b/src/styles/Stand.module.scss
@@ -151,10 +151,16 @@ border: 1px solid #DCDCDC;
     margin-bottom: 80px;
 
 }
-
+@media screen and (max-width: 1800px) {
+    .info {
+        width: 1200px;
+        font-size: 14px;
+        height: 200px;
+    }
+}
 @media screen and (max-width: 1000px) {
     .info {
-        width: 900px;
+        width: 600px;
         height: 200px;
         margin-left: 25.5px;
     }
